# buaa_compiler

./: CMakeLists.txt  README.md  error.cpp  error.h  generate_ir.cpp  generate_ir.h  ir.cpp  ir.h  lexer.cpp  llvm_ir.cpp  llvm_ir.h  llvm_ir.txt  main.cpp  mips.cpp  mips.h  output.txt  parser.cpp  parser.h  token.cpp  token.h  utils.cpp  utils.h  zip.sh
2023错误处理辅助库/: output1.txt  output10.txt  output11.txt  output12.txt  output13.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt
hw1/: CMakeLists.txt  generate.cpp  generate.h
hw1/output/: output2.txt  output3.txt  testfile1.c  testfile1.txt  testfile2  testfile2.txt  testfile3.c  testfile3.txt  testfile4.txt  zip.sh
hw2/: main.cpp  parser.cpp  testfile.txt
hw2/词法分析辅助库/C/output/: output8.txt
hw3/: CMakeLists.txt  error.h  lexer.h  parser.cpp  parser.h
hw3/lexerTest/B/output/: output1.txt
hw3/parserTest/B/output/: output1.txt
hw3/parserTest/C/output/: output5.txt
lexerTest/B/output/: output2.txt  output7.txt
lexerTest/C/output/: output5.txt
output/: output1.txt  output4.txt  testfile1  testfile2.c  testfile3  testfile4  testfile4.c  testfile5.c
parserTest/A/output/: output1.txt
parserTest/B/output/: output2.txt  output7.txt
parserTest/C/output/: output8.txt
test/A/: testfile14.txt  testfile7.txt
test/B/: testfile4.txt
混合辅助测试库/: error16.txt  error17.txt  error18.txt  error19.txt  error20.txt  error21.txt  testfile17.txt  testfile18.txt  testfile19.txt  testfile20.txt  testfile21.txt
